# Minino

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  change  minino.kicad_mod
examples/ESP-IDF/minino/main/: CMakeLists.txt  Kconfig.projbuild  cmd_pcap.c  cmd_sniffer.c  display.c  esp_ot_cli.c  esp_ot_cli.h  esp_zb_switch.c  esp_zb_switch.h  idf_component.yml  keyboard.c  lvgl_demo_ui.c  main.c  minino.c  sdcard.c  simple_sniffer.c  switch_driver.c  switch_driver.h  thread_cli.c
examples/ESP-IDF/minino/main/drivers/: oled_driver.c  oled_driver.h
examples/ESP-IDF/minino/main/include/: button_helper.h  cmd_sniffer.h  display.h  display_helper.h  esp_ot_config.h  keyboard.h  sdcard.h  simple_sniffer.h  thread_cli.h
examples/ESP-IDF/minino/main/modules/: bitmaps.h  keyboard_module.c  keyboard_module.h  led_events.c  led_events.h  menu_screen_modules.c  menu_screen_modules.h  menu_screens_modules.c  menu_screens_modules.h  screen_modules.h
examples/minino/main/: CMakeLists.txt  Kconfig.projbuild  main.c
examples/minino/main/apps/thread_sniffer/: thread_sniffer.c  thread_sniffer.h  thread_sniffer_bitmaps.h  (+1 more)
examples/minino/main/general/: bitmaps_general.h
firmware/: Makefile  (+43 more)
firmware/components/OTA/: CMakeLists.txt  OTA.c
firmware/components/OTA/include/: OTA.h
firmware/components/drone_id/: CMakeLists.txt  location.h  odrone_id.cpp  odrone_id.h
firmware/components/drone_id/alt_unix_time/: alt_unix_time.c  alt_unix_time.h
firmware/components/drone_id/id_open/: id_open.cpp  id_open.h
firmware/components/drone_id/id_open_esp32/: id_open_beacon.cpp  id_open_esp32.cpp  id_open_esp32.h
firmware/components/drone_id/odid_wifi/: wifi.c
firmware/components/drone_id/opendroneid/: opendroneid.c  opendroneid.h
firmware/components/drone_id/spoofer/: spoofer.cpp  spoofer.h
firmware/components/drone_id/utm/: utm.cpp  utm.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/main/apps/app_demo/: README.md  hello_cmd.c  hello_cmd.h  hello_module.c  hello_module.h
firmware/main/apps/thread_sniffer/: thread_sniffer.c  thread_sniffer_screens.c
firmware/main/apps/wifi_analyzer/: wifi_analyzer.c  wifi_analyzer.h  wifi_bitmaps.h
firmware/main/core/error_handler/: error_handler.c  error_handler.h
firmware/main/core/memory_monitor/: memory_monitor.c  memory_monitor.h
firmware/main/core/task_manager/: task_manager.c  task_manager.h
firmware/main/drivers/oled_driver/: font8x8_basic.h  oled_driver.c  oled_driver.h  oled_driver_i2c.c
firmware/main/entities/: animation_t.h  bitmap_t.h
firmware/main/general/: bitmaps_general.h  general_screens.c  general_screens.h
firmware/main/general/entities/: entities.h
firmware/main/general/general_animations/: general_animations.c  general_animations.h
firmware/main/general/general_filesdir/: general_filedir.h
firmware/main/general/general_flash_storage/: general_flash_storage.c  general_flash_storage.h
firmware/main/general/general_interactive_screen/: general_interact_screen.c  general_interact_screen.h
firmware/main/general/general_knob/: general_knob.c  general_knob.h
firmware/main/general/general_notification/: general_notification.c  general_notification.h
firmware/main/general/general_radio_selection/: general_radio_selection.c  general_radio_selection.h
firmware/main/general/general_scrolling_text/: general_scrolling_text.c  general_scrolling_text.h
firmware/main/general/general_sounds/: general_sounds.c  general_sounds.h
firmware/main/general/general_submenu/: general_submenu.c  general_submenu.h
firmware/main/modules/about/: about_module.c  about_module.h
firmware/main/modules/animations_module/: animations_module.c  animations_module.h
firmware/main/modules/animations_task/: animations_task.c  animations_task.h
firmware/main/modules/ble/: ble_bitmaps.h  ble_module.c  ble_module.h  ble_screens_module.c  ble_screens_module.h
firmware/main/modules/cat_dos/: cat_console.c  cat_console.h  catdos_module.c  catdos_module.h  cmd_catdos.c
firmware/main/modules/cmd_control/: cmd_control.c  cmd_control.h  cmd_system.c  cmd_uart_bridge.c  cmd_wifi_list.c  cmd_wifi_list.h
firmware/main/modules/coroutine/: coroutine.c  coroutine.h
firmware/main/modules/file_manager/: file_manager_module.c  file_manager_module.h  file_manager_screens.c  file_manager_screens.h
firmware/main/modules/gps/: gps_bitmaps.h  gps_module.c  gps_module.h  gps_screens.c  gps_screens.h
firmware/main/modules/keyboard/: keyboard_module.c  keyboard_module.h
firmware/main/modules/led_events/: led_events.c  led_events.h
firmware/main/modules/menu_screens/: menu_screens_modules.c  menu_screens_modules.h  screens_modules.h
firmware/main/modules/menus_module/: menus.h  menus_module.c  menus_module.h  menus_screens.c  menus_screens.h
firmware/main/modules/modals/: modals_module.c  modals_module.h  modals_screens.c  modals_screens.h
firmware/main/modules/oled_screen/: oled_screen.c  oled_screen.h
firmware/main/modules/open_thread/: open_thread_module.c  open_thread_module.h  open_thread_screens_module.c  open_thread_screens_module.h
firmware/main/modules/ota/: ota_module.c  ota_module.h  ota_module_screens.c  ota_module_screens.h
firmware/main/modules/resistor_detector/: resistor_detector.c  resistor_detector.h
firmware/main/modules/screen_saver/: screen_saver.c  screen_saver.h
firmware/main/modules/settings/: settings_module.c  settings_module.h
firmware/main/modules/sleep_mode/: sleep_mode.c  sleep_mode.h
firmware/main/modules/war_bee/: warbee_module.c
firmware/main/modules/war_thread/: warthread_module.h
firmware/main/modules/web_file_browser/: web_file_browser_module.c  web_file_browser_module.h  web_file_browser_screens.c  web_file_browser_screens.h
firmware/main/modules/wifi/: wifi_bitmaps.h  wifi_module.c  wifi_module.h  wifi_screens_module.c  wifi_screens_module.h
firmware/main/modules/zigbee/: zigbee_bitmaps.h  zigbee_module.c  zigbee_screens_module.c  zigbee_screens_module.h
firmware/main/templates/general_submenu/: submenu_template.c
(+929 files in other folders)
